Implement locations endpoint
